# hashcode19

./: .gitignore  Makefile  README.md  hashcode19.opam
solutions/: a_example.solver  b_lovely_landscapes  b_lovely_landscapes.solver  c_memorable_moments  c_memorable_moments.solver  d_pet_pictures  d_pet_pictures.solver  e_shiny_selfies  e_shiny_selfies.solver
src/: common.ml  config.ml  dummy.ml  dune  extPervasives.ml  extSeq.ml  graph.ml  io.ml  io.mli  linear.ml  logger.ml  main.ml  naive.ml  problem.ml  slidesFromPhotos.ml  solution.ml  solvers.ml  solvers.mli
