opam-version: "2.0"

name: "hashcode19"
synopsis: "Our contribution to the Google HashCode in 2019"

homepage: "https://github.com/LesBoloss-es/hashcode19"
bug-reports: "https://github.com/LesBoloss-es/hashcode19/issues"

authors: [
  "Victor Lanvin <victor.lanvin@irif.fr>"
  "Martin Pepin <martin.pepin@ens.fr>"
  "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
]
maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"

depends: [
  "dune"          {build}
  "logs"
  "lwt"
  "ocaml"         {>= "4.05"}
  "ppx_deriving"  {build}
]
